<resources>
    <string name="app_name">GithubUser</string>
    <string name="username">Username</string>
    <string name="list_follower">List Follower</string>
    <string name="list_following">List Following</string>
    <string name="hello">Hello</string>
    <string name="ini_fragment">ini Fragment</string>
    <string name="ini_main">INI Main</string>
    <string name="search_github_user">search Github User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="user_not_found">User not found</string>
    <string name="have_no_followers">Followers : 0</string>
    <string name="have_no_following">Following : 0</string>
    <string name="detail_user">Detail User</string>
    <string name="favorite_user">Favorite User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="message">Message</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="daily_remainder">Daily Reminder</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="text">Set reminder at 9 a.m!</string>
</resources>
