<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:background="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/one_time_alarm"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_once_date"
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_today_black_24dp"
                android:background="@android:color/holo_blue_bright"/>
            <TextView
                android:id="@+id/tv_once_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_once_time"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_access_time_black_24dp"
                android:background="@android:color/holo_blue_bright"/>
            <TextView
                android:id="@+id/tv_once_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/time" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_once_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/message"
            android:inputType="text" />
        <Button
            android:id="@+id/btn_set_once_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="end"
            android:text="@string/set_alarm"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/daily_remainder"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:layout_marginBottom="16dp"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_turn_off_remainder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginEnd="8dp"
                android:text="@string/turn_off"
                android:backgroundTint="@color/color1"
                app:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
            <Button
                android:id="@+id/btn_turn_on_remainder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@android:color/white"
                android:text="@string/turn_on"
                app:backgroundTint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>